<?xml version="1.0"?>
<package format="2">
  <name>bpvo_ros</name>
  <version>0.0.0</version>
  <description>The bpvo_ros package</description>

  <maintainer email="andre-phu-van.nguyen@polymtl.ca">Andre Phu-Van Nguyen</maintainer>
  <license>BSD</license>

  <author email="andre-phu-van.nguyen@polymtl.ca">Andre Phu-Van Nguyen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>yaml_cpp_catkin</depend>
</package>
